<resources>
    <string name="app_name">KimKazandiApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="cekilisler">Cekilişler</string>
    <string name="yeni_baslayanlar">Yeni Başlayanlar</string>
    <string name="bedava_katilim">Bedava Katılım</string>
    <string name="araba_kazan">Araba Kazan</string>
    <string name="telefon_tablet_kazan">Telefon Tablet Kazan</string>
    <string name="tatil_kazan">Tatil Kazan</string>
    <string name="takip_ettiklerim">Takip Ettiklerim</string>
    <string name="ibrahim_taskin">İbrahim TAŞKIN</string>
    <string name="email">taskinnibrahim@gmail.com</string>
</resources>